# s8-widget

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
