[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "s8-widget"
repository = ""
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
reqwest = {version = "0.11.14", features = ["blocking"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2.0"
tauri = {version = "1.2", features = ["cli", "shell-open", "system-tray", "window-start-dragging"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
